# clixon-pyapi

./: .readthedocs.yaml  CHANGELOG.md  README.md  clixon_server.py  install.sh  publiccode.yml  pyproject.toml  pytest.ini  requirements-apt.sh  requirements.txt  server.py  setup.py  test.py
.github/workflows/: ci.yml  codeql.yml
clixon/: __init__.py  args.py  client.py  clixon.py  clixon_server.py  element.py  event.py  exceptions.py  helpers.py  log.py  modules.py  netconf.py  parser.py  sock.py  version.py
debian/: README.Debian  changelog  control  copyright  gbp.conf  install  rules
docker/: Dockerfile  docker-compose.yml  start.sh
docs/source/: conf.py  conf.py~  index.rst
examples/template/: template.xml  test.py  test.yang
modules/: README.md  test1.py  test1.py~  test2.py  test2.py~
pyapi/: api.py  args.py  client.py  clixon.py  element.py  log.py  modules.py  netconf.py  parser.py
scripts/: build_deb.sh
tests/: config.py  test_api.py  test_argparse.py  test_configfile.py  test_element.py  test_events.py  test_exceptions.py  test_get_path.py  test_helpers.py  test_log.py  test_logger.py  test_netconf.py  test_parse.py  test_path_to_xpath.py  test_socket.py  test_templates.py
utils/: xml_generator.py
